# CLI-Client

./: Cargo.toml  README.md  memo.md
src/: commands.rs  download.rs  login.rs  main.rs  upload.rs  utility.rs
