[package]
name = "disdrive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json","multipart"] }
rpassword = "7.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
termion = "2.0.1"
tokio = { version = "1.28.2", features = ["full"] }
